test/scc/expr/semantic-errors/154.t
void test()
{
    char a[] = { "abc", 'd' };
}